[package]
name = "plc_decoder"
version = "0.1.0"
edition = "2021"

[dependencies]
clipboard = "0.5.0"
eframe = "0.29.0"
egui = "0.29.0"
encoding_rs = "0.8.34"
hex = "0.4.3"
regex = "1.10.6"

[profile.release]
opt-level = 'z'     
lto = true          
codegen-units = 1   
panic = 'abort'     
strip = true        
